Edit alignments of divs and fix overflow issues. Also add some javascript for resize and window onload

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
 html, body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   margin: 0px;
   font-family: calibri;
-  background-image: url("./images/form-background.jpg");
-  min-height: 400px;
+  min-width: 400px;
 }
 
 @font-face {
@@ -13,11 +12,14 @@ html, body {
   src: url(./fonts/Norse-Bold.otf) format("opentype");  
 }
 
+* {
+  box-sizing: border-box;
+}
+
 #leftContainer {
   width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
+  position: relative;
+  background-image: url("./images/form-background.jpg");
 }
 
 #leftContainer > a:hover {
@@ -26,19 +28,19 @@ html, body {
 }
 
 #rightContainer {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   justify-content: space-between;
   flex-direction: column;
-  overflow-x: hidden;
 }
 
 #imageCredit {
   color: white;
   font-size: 100%;
+  width: 100%;
   position: absolute;
-  bottom: 0%;
-  padding: 5px;
+  bottom: 0;
+  text-align: center;
 }
 
 a {
@@ -46,9 +48,9 @@ a {
 }
 
 #logoDiv {
-  font-family: "Italiana";
+  font-family: "norseBold";
   color: white;
-  font-size: 50px;
+  font-size: 80px;
   height: 150px;
   width: 100%;
   background-color: rgba(0,0,0,0.5);
@@ -63,11 +65,9 @@ a {
   width: auto;
 }
 
-
-
 .fillerArea {
-  min-height: 300px;
   width: 100%;
+  height: 100%;
   background-color: #e8e8e8;
   flex-direction: column;
   display: flex;
@@ -83,11 +83,11 @@ a {
   justify-content: flex-start;
 }
 
-#filler1 > p {
+#paragraphContainer {
   font-size: 25px;
   font-weight: bold;
+  width: 80%;
   padding: 30px;
-  width: 70%;
 }
 
 #filler2 > div > button{
@@ -111,8 +111,9 @@ a {
 
 #mainFormContainer {
   width: 100%;
-  height: 100%;
   background-color: white;
+  align-items: center;
+  padding: 30px;
 }
 
 #mainForm {
@@ -120,7 +121,6 @@ a {
   justify-content: space-evenly;
   align-items: flex-start;
   width: 100%;
-  margin: 30px;
 }
 
 #mainFormContainer, #rightContainer, #logoDiv {
@@ -133,6 +133,7 @@ form {
   max-width: 550px;
   padding: 0px;
   justify-content: flex-start;
+  margin: 0px;
 }
 
 input {
@@ -145,7 +146,7 @@ input {
 .inputDiv {
   display: flex;
   flex-direction: column;
-  margin-right: 50px;
+  margin-right: 10px;
   margin-bottom: 15px;
 }
 
